--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,7 +27,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into DockerHub
@@ -43,7 +46,7 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -54,8 +57,8 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            tonyrl/rsshub
-            ghcr.io/tonyrl/rsshub
+            ${{ env.IMAGE_NAME }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: latest=true
 
       # Build and push Docker image with Buildx (don't push on PR)
@@ -65,7 +68,7 @@ jobs:
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: |
-            tonyrl/rsshub
-            ghcr.io/tonyrl/rsshub
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha, scope=${{ github.workflow }}
+          cache-to: type=gha, mode=max, scope=${{ github.workflow }}
